feat: update rollback to allow V4 to V2
https://gravitee.atlassian.net/browse/APIM-10221